# cgmlstorg_client

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-build.yml
cgmlstorg_client/: __init__.py  about.py  cli.py  config.py  config_test.py  download_scheme.py  list_schemes.py  list_schemes_test.py  utils.py
docsrc/: conf.py
